--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fullcalendar/react": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "@mui/material": "^5.14.0",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -28,6 +29,7 @@
     "react-router-dom": "^6.14.1",
     "react-scheduler": "^0.1.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.4",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
