gestion de menu

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap-icons": "^1.10.5",
+    "chart.js": "^4.3.2",
     "dateformat": "^5.0.3",
     "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.1",
     "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
